tests/machine/x/cpp/left_join.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <iostream>
#include <string>
#include <vector>

struct Customer {
  int id;
  decltype(std::string("Alice")) name;
};
struct Order {
  int id;
  int customerId;
  int total;
};
struct Result {
  decltype(o.id) orderId;
  decltype(c) customer;
  decltype(o.total) total;
};
int main() {
  std::vector<Customer> customers = {Customer{1, std::string("Alice")},
                                     Customer{2, std::string("Bob")}};
  std::vector<Order> orders = {Order{100, 1, 250}, Order{101, 3, 80}};
  std::vector<Result> result = ([&]() {
    std::vector<Result> __items;
    for (auto o : orders) {
      {
        bool __matched0 = false;
        for (auto c : customers) {
          if (!((o.customerId == c.id)))
            continue;
          __matched0 = true;
          __items.push_back(Result{o.id, c, o.total});
        }
        if (!__matched0) {
          auto c = std::decay_t<decltype(*(customers).begin())>{};
          __items.push_back(Result{o.id, c, o.total});
        }
      }
    }
    return __items;
  })();
  std::cout << std::string("--- Left Join ---") << std::endl;
  for (auto entry : result) {
    {
      std::cout << std::string("Order");
      std::cout << ' ';
      std::cout << entry.orderId;
      std::cout << ' ';
      std::cout << std::string("customer");
      std::cout << ' ';
      std::cout << entry.customer;
      std::cout << ' ';
      std::cout << std::string("total");
      std::cout << ' ';
      std::cout << entry.total;
      std::cout << std::endl;
    }
  }
  return 0;
}
